--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- Javascript
 ================================================== -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/assets/js/jquery.js"></script>')</script>
-<script src="/assets/js/bootstrap.js"></script>
+<script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.js"></script>')</script>
+<script src="/assets/js/vendor/bootstrap.js"></script>
 <script src="/assets/js/plugins.js"></script>
 <script src="/assets/js/main.js"></script>
 
