Add {{ site.url }} for ressources links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <!-- Javascript
 ================================================== -->
-<script src="/assets/js/vendor/jquery.js"></script>
-<script src="/assets/js/vendor/bootstrap.js"></script>
-<script src="/assets/js/plugins.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="{{ site.url }}/assets/js/vendor/jquery.js"></script>
+<script src="{{ site.url }}/assets/js/vendor/bootstrap.js"></script>
+<script src="{{ site.url }}/assets/js/plugins.js"></script>
+<script src="{{ site.url }}/assets/js/main.js"></script>
 
 <!-- Analytics
 ================================================== -->
