--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,12 +9,12 @@
 <meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
 
 <link rel="author" href="humans.txt">
-<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css">
-<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
+<link rel="stylesheet" href="/assets/css/bootstrap.css">
+<link rel="stylesheet" href="/assets/css/main.css">
 
 <!--[if lt IE 9]>
-  <script src="{{ site.url }}/assets/js/html5shiv.js"></script>
+  <script src="/assets/js/html5shiv.js"></script>
 <![endif]-->
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="{{ site.url }}/assets/ico/favicon.png">
+<link rel="shortcut icon" href="/assets/ico/favicon.png">
