try {{ site.url }}

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 <meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
 
 <link rel="author" href="humans.txt">
-<link rel="stylesheet" href="/assets/css/bootstrap.css">
+<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css">
 <link rel="stylesheet" href="/assets/css/main.css">
 
 <!--[if lt IE 9]>
