--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-fixed-top">
   <div class="container">
-    <a href="/" class="navbar-brand">YOOOO</a>
+    <a href="{{ site.url }}/" class="navbar-brand">YOOOO</a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -9,10 +9,10 @@
     <div class="nav-collapse collapse">
       <ul class="nav navbar-nav">
         <li{% if page.slug == "page1" %} class="active"{% endif %}>
-          <a href="/getting-started">Page 1</a>
+          <a href="{{ site.url }}/page1.html">Page 1</a>
         </li>
         <li{% if page.slug == "page2" %} class="active"{% endif %}>
-          <a href="/css">Page 2</a>
+          <a href="{{ site.url }}/page2.html">Page 2</a>
         </li>
       </ul>
     </div>
