--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
 
 <link rel="author" href="humans.txt">
 <link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css">
+<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
 <!--[if lt IE 9]>
