--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,3 +7,84 @@
 
 /* Body and structure
 -------------------------------------------------- */
+body {
+  padding-top: 50px;
+  font-family: Ubuntu;
+}
+
+/*
+ * Customize the navbar
+ */
+
+.navbar {
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0,0,0,.25);
+}
+.navbar .btn {
+  float: right;
+  margin-top: 8px;
+}
+
+.navbar-brand {
+  color: #b94a48;
+}
+.navbar-brand:hover {
+  color: #a03d3c;
+}
+
+
+/*
+ * Customize jumbotron
+ */
+
+.jumbotron {
+  margin-bottom: 0;
+  font-size: 16px;
+  font-weight: normal;
+  border-radius: 0;
+  background-color: #000;
+  background-image: url("../assets/img/moma-1.jpg");
+  background-size: cover;
+}
+.jumbotron .container {
+  max-width: 800px;
+  text-align: center;
+}
+.jumbotron .btn {
+  margin-top: 10px;
+  padding: 15px 25px;
+  font-size: 14px;
+}
+.jumbotron h1,
+.jumbotron .lead {
+  text-shadow: 0 1px 2px rgba(0,0,0,.5);
+}
+.jumbotron h1 {
+  line-height: 1;
+  color: #fff;
+}
+.jumbotron p {
+  color: #fff;
+}
+.jumbotron p a {
+  color: #fff;
+  font-weight: bold;
+}
+
+/*
+ * Responsively scale things up
+ */
+
+@media (min-width: 768px) {
+
+  /* Scale padding and font-sizes */
+  .jumbotron {
+    padding-top:    250px;
+    padding-bottom: 250px;
+    font-size: 21px;
+  }
+  .jumbotron h1 {
+    font-size: 80px;
+  }
+
+}
