test some javascript

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,7 +1,7 @@
-<div class="navbar navbar-fixed-top">
+<div class="navbar" data-spy="affix" data-offset-top="600">
   <div class="container">
     <a href="{{ site.url }}/" class="navbar-brand">YOOOO</a>
-    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".nav-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
