--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,18 +8,86 @@
 /* Body and structure
 -------------------------------------------------- */
 body {
-  padding-top: 50px;
   font-family: Ubuntu;
 }
+.footer {
+  padding: 60px 20px;
+  color: #999;
+  background-color: #282a2b;
+}
+.footer ul {
+  margin-bottom: 30px;
+}
+.footer li {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.footer a {
+  color: #fff;
+}
+.footer p {
+  color: #7a7a7a;
+  text-align: center;
+}
+
 
 /*
- * Customize the navbar
+ * Customize the default button styles
+ */
+
+.btn {
+  text-transform: uppercase;
+}
+
+.btn,
+.btn:hover,
+.btn:active {
+  background-color: #a03d3c;
+  border-color: #a03d3c;
+}
+.btn {
+  background-image: -webkit-linear-gradient(#b94a48, #a03d3c);
+  background-repeat: repeat-x;
+}
+.btn:hover {
+  background-position: 0 -15px;
+}
+
+
+/*
+ * Add our own button modifier class
+ */
+
+.btn-outline,
+.btn-outline:hover,
+.btn-outline:active {
+  color: #fff;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid rgba(255,255,255,.4);
+}
+.btn-outline:hover,
+.btn-outline:active {
+  background-color: rgba(255,255,255,.4);
+}
+
+
+/*
+ * Customize the navbar even more by affixing it
  */
 
 .navbar {
   background-color: #fff;
+  background-clip: padding-box;
+  border-bottom: 1px solid rgba(0,0,0,.1);
+}
+.navbar.affix {
+  top: 0;
+  right: 0;
+  left: 0;
   box-shadow: 0 0 10px rgba(0,0,0,.25);
 }
+
 .navbar .btn {
   float: right;
   margin-top: 8px;
@@ -34,41 +102,37 @@ body {
 
 
 /*
- * Customize jumbotron
+ * Instead of customizing the jumbotron, we customize the carousel
  */
 
-.jumbotron {
-  margin-bottom: 0;
-  font-size: 16px;
-  font-weight: normal;
-  border-radius: 0;
-  background-color: #000;
-  background-image: url("../assets/img/moma-1.jpg");
-  background-size: cover;
+.carousel-inner > .item {
+  height: 300px;
 }
-.jumbotron .container {
-  max-width: 800px;
-  text-align: center;
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  min-height: 300px;
 }
-.jumbotron .btn {
+.carousel-caption {
+  max-width: 600px;
+  margin: 0 auto;
+  bottom: 20%;
+}
+.carousel-caption p {
+  display: none; /* Hide the caption for now, but show it when we have the space */
+}
+.carousel-caption a {
+  color: #fff;
+  font-weight: 500;
+}
+.carousel-caption .btn {
   margin-top: 10px;
   padding: 15px 25px;
   font-size: 14px;
 }
-.jumbotron h1,
-.jumbotron .lead {
-  text-shadow: 0 1px 2px rgba(0,0,0,.5);
-}
-.jumbotron h1 {
-  line-height: 1;
-  color: #fff;
-}
-.jumbotron p {
-  color: #fff;
-}
-.jumbotron p a {
-  color: #fff;
-  font-weight: bold;
+.carousel-caption .btn-outline {
+  display: none; /* Hide to start, but show it when we have the space */
 }
 
 /*
@@ -77,14 +141,24 @@ body {
 
 @media (min-width: 768px) {
 
-  /* Scale padding and font-sizes */
-  .jumbotron {
-    padding-top:    250px;
-    padding-bottom: 250px;
-    font-size: 21px;
+  /* Scale up images in carousel */
+  .carousel-inner > .item {
+    height: 600px;
   }
-  .jumbotron h1 {
-    font-size: 80px;
+  .carousel-inner > .item > img {
+    min-height: 600px;
+  }
+
+  /* Scale font-sizes and show more content when doable */
+  .carousel-caption h1 {
+    font-size: 60px;
+    line-height: 1;
+  }
+  .carousel-caption p {
+    display: block;
+  }
+  .carousel-caption .btn-outline {
+    display: inline-block;
   }
 
 }
