--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -8,8 +8,8 @@
     </button>
     <div class="nav-collapse collapse">
       <ul class="nav navbar-nav">
-        <li{% if page.slug == "page1" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/page1.html">Page 1</a>
+        <li{% if page.slug == "home" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/index.html">Page 1</a>
         </li>
         <li{% if page.slug == "page2" %} class="active"{% endif %}>
           <a href="{{ site.url }}/page2.html">Page 2</a>
