--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,4 +1,4 @@
-<div class="navbar" data-spy="affix" data-offset-top="600">
+<!-- <div class="navbar" data-spy="affix" data-offset-top="600">
   <div class="container">
     <a href="{{ site.url }}/" class="navbar-brand">YOOOO</a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".nav-collapse">
@@ -17,4 +17,4 @@
       </ul>
     </div>
   </div>
-</div><!-- /navbar -->
+</div>/navbar -->
