--- a/_includes/colophon.html
+++ b/_includes/colophon.html
@@ -1,16 +1,44 @@
 <!-- Footer
 ================================================== -->
-<footer class="bs-footer">
-  {% include social-buttons.html %}
-
-  <p>Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
-  <p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-  <p><a href="http://glyphicons.com">Glyphicons Free</a> licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-  <ul class="footer-links">
-    <li><a href="http://blog.getbootstrap.com">Blog</a></li>
-    <li class="muted">&middot;</li>
-    <li><a href="https://github.com/twitter/bootstrap/issues?state=open">Issues</a></li>
-    <li class="muted">&middot;</li>
-    <li><a href="https://github.com/twitter/bootstrap/blob/master/CHANGELOG.md">Changelog</a></li>
-  </ul>
-</footer>
+<div class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col col-lg-2 col-offset-2">
+        <h4>Pages</h4>
+        <ul class="list-unstyled">
+          <li><a href="../step-1/index.html">Un lien</a></li>
+          <li><a href="../step-2/index.html">Un lien</a></li>
+          <li><a href="../step-3/index.html">Un lien</a></li>
+          <li><a href="../step-4/index.html">Un lien</a></li>
+          <li><a href="../step-5/index.html">Un lien</a></li>
+        </ul>
+      </div>
+      <div class="col col-lg-2">
+        <h4>Un lien</h4>
+        <ul class="list-unstyled">
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+        </ul>
+      </div>
+      <div class="col col-lg-2">
+        <h4>Un lien</h4>
+        <ul class="list-unstyled">
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+        </ul>
+      </div>
+      <div class="col col-lg-2">
+        <h4>Un lien</h4>
+        <ul class="list-unstyled">
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+        </ul>
+      </div>
+    </div>
+    <p>Made with love by <a href="http://link-webcreations.fr">Yves</a>.</p>
+    <p>&lt;3</p>
+  </div>
+</div>
