--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,6 +136,31 @@ body {
 }
 
 /*
+ * Create a brand new component
+ */
+
+.featurette {
+  padding: 20px;
+  text-align: center;
+}
+.featurette .container {
+  max-width: 800px;
+}
+.featurette:nth-child(even) {
+  background-color: #e8eaec;
+}
+.featurette .step-num {
+  width: 98px;
+  height: 98px;
+  margin: 0 auto;
+  line-height: 95px;
+  text-align: center;
+  border: 1px solid rgba(0,0,0,.1);
+  border-radius: 50px;
+}
+
+
+/*
  * Responsively scale things up
  */
 
@@ -159,6 +184,12 @@ body {
   }
   .carousel-caption .btn-outline {
     display: inline-block;
+  }
+
+  /* Increase whitespace around featurette for impact */
+  .featurette {
+    padding-top:    100px;
+    padding-bottom: 100px;
   }
 
 }
