--- a/_includes/colophon.html
+++ b/_includes/colophon.html
@@ -6,11 +6,11 @@
       <div class="col col-lg-2 col-offset-2">
         <h4>Pages</h4>
         <ul class="list-unstyled">
-          <li><a href="../step-1/index.html">Un lien</a></li>
-          <li><a href="../step-2/index.html">Un lien</a></li>
-          <li><a href="../step-3/index.html">Un lien</a></li>
-          <li><a href="../step-4/index.html">Un lien</a></li>
-          <li><a href="../step-5/index.html">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
         </ul>
       </div>
       <div class="col col-lg-2">
