--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,4 +1,4 @@
-<!-- <div class="navbar" data-spy="affix" data-offset-top="600">
+<div class="navbar navbar-fixed-top">
   <div class="container">
     <a href="{{ site.url }}/" class="navbar-brand">YOOOO</a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".nav-collapse">
@@ -9,12 +9,12 @@
     <div class="nav-collapse collapse">
       <ul class="nav navbar-nav">
         <li{% if page.slug == "home" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/index.html">Page 1</a>
+          <a href="{{ site.url }}/index.html">Home</a>
         </li>
-        <li{% if page.slug == "page2" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/page2.html">Page 2</a>
+        <li{% if page.slug == "page1" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/page1.html">Page 1</a>
         </li>
       </ul>
     </div>
   </div>
-</div>/navbar -->
+</div>
