--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
   </head>
   <body>
 
+    <!-- Navbar -->
+    {% include nav-main.html %}
+
     <!-- Page content of course! -->
     {{ content }}
     
