--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@
 -------------------------------------------------- */
 body {
   font-family: Ubuntu;
+  padding-top: 50px;
 }
 .footer {
   padding: 60px 20px;
