--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,9 @@ body {
   font-family: Ubuntu;
   padding-top: 50px;
 }
+section {
+  padding-top: 50px;
+}
 .footer {
   padding: 60px 20px;
   color: #999;
