--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,44 @@
-<!-- Javascript
+<!-- Footer
 ================================================== -->
-<script src="{{ site.url }}/assets/js/vendor/jquery.js"></script>
-<script src="{{ site.url }}/assets/js/vendor/bootstrap.js"></script>
-<script src="{{ site.url }}/assets/js/plugins.js"></script>
-<script src="{{ site.url }}/assets/js/main.js"></script>
-
-<!-- Analytics
-================================================== -->
-<script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-  function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-  e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-  e.src='//www.google-analytics.com/analytics.js';
-  r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-XXXXX-X');ga('send','pageview');
-</script>
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col col-lg-2 col-offset-2">
+        <h4>Pages</h4>
+        <ul class="list-unstyled">
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+        </ul>
+      </div>
+      <div class="col col-lg-2">
+        <h4>Un lien</h4>
+        <ul class="list-unstyled">
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+        </ul>
+      </div>
+      <div class="col col-lg-2">
+        <h4>Un lien</h4>
+        <ul class="list-unstyled">
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+        </ul>
+      </div>
+      <div class="col col-lg-2">
+        <h4>Un lien</h4>
+        <ul class="list-unstyled">
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+          <li><a href="{{ site.url }}/">Un lien</a></li>
+        </ul>
+      </div>
+    </div>
+    <p>Made with love by <a href="http://link-webcreations.fr">Yves</a>.</p>
+    <p>&lt;3</p>
+  </div>
+</footer>
