--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>
-  {{ page.title }} &middot; JuEtPy
-</title>
-<meta name="description" content="">
-<meta name="author" content="Yves ANDOLFATTO">
+<title>{{ page.title }} {{ site.title }}</title>
+<meta name="description" content="{{ site.description }}">
+<meta name="author" content="{{ site.author }}">
 <meta name="viewport" content="width=device-width">
 <meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
 
@@ -14,7 +12,8 @@
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
 <!--[if lt IE 9]>
-  <script src="{{ site.url }}/assets/js/html5shiv.js"></script>
+  <script src="{{ site.url }}/assets/js/vendor/html5shiv.js"></script>
+  <script src="{{ site.url }}/assets/js/vendor/respond.min.js"></script>
 <![endif]-->
 
 <!-- Favicons -->
