--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,24 +3,18 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
-    <!-- Meta, title, CSS, favicons, etc. -->
-    {% include header.html %}
-    <!-- Place anything custom after this. -->
-  </head>
-  <body>
+<head>
+  {% include header.html %}
+</head>
+<body>
+{% include nav-main.html %}
 
-    <!-- Navbar -->
-    {% include nav-main.html %}
+{{ content }}
 
-    <!-- Page content of course! -->
-    {{ content }}
-    
-    <!-- Main docs footer (social buttons, copyright, etc). -->
-    {% include colophon.html %}
+{% include footer.html %}
 
-    <!-- JS and analytics only. -->
-    {% include footer.html %}
-
-  </body>
+{% include js.html %}
+{% include google_analytics.html %}
+{% include disqus.html %}
+</body>
 </html>
