--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -11,8 +11,11 @@
         <li{% if page.slug == "home" %} class="active"{% endif %}>
           <a href="{{ site.url }}/index.html">Home</a>
         </li>
-        <li{% if page.slug == "page1" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/page1">Page 1</a>
+        <li{% if page.slug == "prepa" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/page1">Préparation</a>
+        </li>
+        <li{% if page.slug == "articles" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/page1">Articles</a>
         </li>
       </ul>
     </div>
