--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -12,10 +12,10 @@
           <a href="{{ site.url }}/index.html">Home</a>
         </li>
         <li{% if page.slug == "prepa" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/page1">Préparation</a>
+          <a href="{{ site.url }}/prepa">Préparation</a>
         </li>
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/page1">Articles</a>
+          <a href="{{ site.url }}/post">Articles</a>
         </li>
       </ul>
     </div>
