--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>{{ page.title }} {{ site.title }}</title>
+<title>{{ page.title }} &middot; JuEtPy</title>
 <meta name="description" content="{{ site.description }}">
 <meta name="author" content="{{ site.author }}">
 <meta name="viewport" content="width=device-width">
