--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -11,11 +11,8 @@
         <li{% if page.slug == "home" %} class="active"{% endif %}>
           <a href="{{ site.url }}/index.html">Home</a>
         </li>
-        <li{% if page.slug == "prepa" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/prepa">Préparation</a>
-        </li>
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/post">Articles</a>
+          <a href="{{ site.url }}/articles">Articles</a>
         </li>
       </ul>
     </div>
