add go back to top on page post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,11 @@
     
 </section>
 
+<!-- Quick back to top -->
+<a href="#" class="top">
+  Haut de page
+</a>
+
 </div>
 
 {% include footer.html %}
