upgrade post tpl

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -12,7 +12,7 @@
           <a href="{{ site.url }}/index.html">Home</a>
         </li>
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/articles">Articles</a>
+          <a href="{{ site.url }}/articles/">Articles</a>
         </li>
       </ul>
     </div>
