--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,20 +11,7 @@
 
 <div class="container">
 
-<!-- articles
-================================================== -->
-<section>
-  <div class="page-header">
-    <h1><a href="{{ page.url }}" >{{ page.title }}</a></h1>
-    <p class="lead">Le {{ page.date | date: "%d/%m/%Y" }}
-      {% if page.tags %} 
-      dans <strong>{{ page.tags }}</strong>
-      {% endif %}
-    </p>
-
-    {{ content | markdownify }}
-    
-</section>
+{{ content }}
 
 <!-- Quick back to top -->
 <a href="#" class="top">
