fix bug compile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,16 @@
 <body>
 {% include nav-main.html %}
 
+<div class="container">
+
 {{ content }}
+
+<!-- Quick back to top -->
+<a href="#" class="top">
+  Haut de page
+</a>
+
+</div>
 
 {% include footer.html %}
 
