--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,29 +1,17 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  {% include header.html %}
-</head>
-<body>
-{% include nav-main.html %}
-
-<div class="container">
-
-{{ content }}
-
-<!-- Quick back to top -->
-<a href="#" class="top">
-  Haut de page
-</a>
-
-</div>
-
-{% include footer.html %}
-
-{% include js.html %}
-{% include google_analytics.html %}
-{% include disqus.html %}
-</body>
-</html>
+---
+layout: default
+---
+<!-- post
+================================================== -->
+<section>
+  <div class="page-header">
+    <h1><a href="{{ page.url }}" >{{ page.title }}</a></h1>
+    <p class="lead">Le {{ page.date | date: "%d/%m/%Y" }}
+      {% if page.tags %} 
+      dans <strong>{{ page.tags }}</strong>
+      {% endif %}
+    </p>
+    
+    {{ content | markdownify }}
+    
+</section>
