upgrade post page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 {% include nav-main.html %}
-
 <div class="container">
 
 {{ content }}
@@ -18,10 +17,9 @@
   Haut de page
 </a>
 
-</div>
+</div><!-- /container -->
 
 {% include footer.html %}
-
 {% include js.html %}
 {% include google_analytics.html %}
 {% include disqus.html %}
