maj to-top button

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-fixed-top"  id="top">
   <div class="container">
     <a href="{{ site.url }}/" class="navbar-brand">YOOOO</a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".nav-collapse">
