--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,14 +6,14 @@
 <head>
   {% include header.html %}
 </head>
-<body>
+<body data-target=".top">
 {% include nav-main.html %}
 <div class="container">
 
 {{ content }}
 
 <!-- Quick back to top -->
-<a href="#" class="top">
+<a href="#" class="to-top">
   Haut de page
 </a>
 
