--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ section {
 }
 
 /* Hide the top link initially */
-.top {
+.to-top {
   display: none;
 }
 
@@ -175,7 +175,7 @@ section {
 @media (min-width: 768px) {
 
   /* Back to top link */
-  .top {
+  .to-top {
     display: block; /* Unhide */
     float: left;
     padding: 7px 15px;
@@ -184,12 +184,12 @@ section {
     background-color: #eee;
     border-radius: 4px;
   }
-  .top:hover {
+  .to-top:hover {
     color: #fff;
     text-decoration: none;
     background-color: #999;
   }
-  .top.affix {
+  .to-top.affix {
     position: fixed;
     right:  15px;
     bottom: 15px;
