test sticky footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,14 @@
   {% include header.html %}
 </head>
 <body data-target=".top">
+<div id="wrap">
 {% include nav-main.html %}
 <div class="container">
 
 {{ content }}
 
 </div><!-- /container -->
-
+</div><!-- /wrap -->
 {% include footer.html %}
 {% include js.html %}
 {% include google_analytics.html %}
