--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,12 +7,22 @@
 /*
  * Body and structure
  */
-
+ 
+html,
+body {
+  height: 100%;
+}
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  /* Negative indent footer by its height */
+  margin: 0 auto -60px;
+  /* Pad bottom by footer height */
+  padding: 0 0 60px;
+}
 body {
   font-family: Ubuntu;
-}
-section {
-  padding-top: 50px;
 }
 
 
@@ -21,7 +31,7 @@ section {
  */
 
 .footer {
-  padding: 60px 20px;
+  height: 60px;
   color: #999;
   background-color: #282a2b;
 }
