--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <head>
   {% include header.html %}
 </head>
-<body data-target=".top">
+<body>
 <div id="wrap">
 {% include nav-main.html %}
 <div class="container">
