--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,12 @@ body {
   /* Pad bottom by footer height */
   padding: 0 0 60px;
 }
+#wrap > .container {
+  padding: 60px 15px 0;
+}
+.container {
+  padding-top: 60px;
+}
 body {
   font-family: Ubuntu;
 }
@@ -211,4 +217,16 @@ body {
     padding-bottom: 100px;
   }
 
+}
+
+
+@media (max-width: 767px) {
+
+  .footer {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  
 }
