--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,9 +22,6 @@ body {
   padding: 0 0 60px;
 }
 #wrap > .container {
-  padding: 60px 15px 0;
-}
-.container {
   padding-top: 60px;
 }
 body {
@@ -37,7 +34,7 @@ body {
  */
 
 .footer {
-  height: 60px;
+  padding: 60px 20px;
   color: #999;
   background-color: #282a2b;
 }
@@ -216,17 +213,3 @@ body {
     padding-top:    100px;
     padding-bottom: 100px;
   }
-
-}
-
-
-@media (max-width: 767px) {
-
-  .footer {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
-}
