--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,10 @@
-<meta charset="utf-8">
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ page.title }} &middot; JuEtPy</title>
   <meta name="description" content="{{ site.description }}">
@@ -18,3 +24,4 @@
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="{{ site.url }}/assets/ico/favicon.png">
+</head>
