--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,24 @@
 {% include nav-main.html %}
 <div class="container">
 
-{{ content }}
+<div class="container bs-docs-container">
+  <div class="row">
+    <div class="col col-lg-3">
+      <div class="bs-sidebar">
+        <ul class="nav bs-sidenav">
+          {% for post in site.posts %}
+          <li>
+            <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+    <div class="col col-lg-9">
+      {{ content }}
+    </div>
+  </div>
+</div>
 
 </div><!-- /container -->
 </div><!-- /wrap -->
