--- a/_includes/nav-sub.html
+++ b/_includes/nav-sub.html
@@ -16,7 +16,7 @@
       ================================================== -->
       <section>
           
-        {{ content }}
+        {{ post.content }}
           
       </section>
     </div>
