--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -1,4 +1,4 @@
-<h1 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h1>
+<h1 class="title"><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h1>
 <div datetime="{{ post.date | date: "%d/%m/%Y" }}">
   <p>Le {{ post.date | date: "%d/%m/%Y" }}</p>
 </div>
