--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -1,6 +1,6 @@
-<h1 class="title"><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h1>
-<div datetime="{{ post.date | date: "%d/%m/%Y" }}">
-  <p>Le {{ post.date | date: "%d/%m/%Y" }}</p>
+<div class="page-header">
+  <h1><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h1>
+  <p class="lead" datetime="{{ post.date | date: "%d/%m/%Y" }}"><p>Le {{ post.date | date: "%d/%m/%Y" }}</p>
 </div>
 <div>{{ post.content }}</div>
-<div class="breaker"></div>
+<hr>
