--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+
 <div class="row">
   <div class="col col-lg-3">
     <div class="sidebar">
@@ -22,4 +23,4 @@ layout: default
     </header>
     {{ content }}
   </div>
-</div>
+</div><!-- /row (sidebar)-->
