--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -16,10 +16,10 @@
           <a href="{{ site.url }}/index.html">Home</a>
         </li>
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/articles">Articles</a>
+          <a href="{{ site.url }}/articles.html">Articles</a>
         </li>
         <li{% if page.slug == "archives" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/archives">Archives</a>
+          <a href="{{ site.url }}/archives.html">Archives</a>
         </li>
       </ul>
     </div>
