Add new page on menu

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -18,6 +18,9 @@
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
           <a href="{{ site.url }}/articles.html">Articles</a>
         </li>
+        <li{% if page.slug == "about" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/about.html">A propos</a>
+        </li>
         <li{% if page.slug == "archives" %} class="active"{% endif %}>
           <a href="{{ site.url }}/archives.html">Archives</a>
         </li>
