--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -3,7 +3,8 @@
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 var disqus_shortname = '{{ site.disqus_short_name }}'; // required: replace example with your forum shortname
-
+var disqus_identifier = '{{ site.url }}{{ post.url }}';
+var disqus_url = '{{ site.url }}{{ page.url }}';
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
