--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -16,13 +16,13 @@
           <a href="{{ site.url }}/index.html">Home</a>
         </li>
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/articles.html">Articles</a>
+          <a href="{{ site.url }}/articles">Articles</a>
         </li>
         <li{% if page.slug == "about" %} class="active"{% endif %}>
           <a href="{{ site.url }}/about.html">A propos</a>
         </li>
         <li{% if page.slug == "archives" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/archives.html">Archives</a>
+          <a href="{{ site.url }}/archives">Archives</a>
         </li>
       </ul>
     </div>
