Paginate worked, plugin simplifie

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,5 +23,5 @@
   <![endif]-->
 
   <!-- Favicons -->
-  <link rel="shortcut icon" href="{{ site.url }}/assets/ico/favicon.png">
+  <link rel="shortcut icon" href="{{ site.url }}/assets/ico/favicon.ico">
 </head>
