--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -13,10 +13,10 @@
     <div class="nav-collapse collapse">
       <ul class="nav navbar-nav">
         <li{% if page.slug == "home" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/index.html">Home</a>
+          <a href="{{ site.url }}/">Home</a>
         </li>
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/articles.html">Articles</a>
+          <a href="{{ site.url }}/articles/">Articles</a>
         </li>
         <li{% if page.slug == "about" %} class="active"{% endif %}>
           <a href="{{ site.url }}/about.html">A propos</a>
