Add lightbox ressources before making gallery

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -2,5 +2,6 @@
 ================================================== -->
 <script src="{{ site.url }}/assets/js/vendor/jquery.js"></script>
 <script src="{{ site.url }}/assets/js/vendor/bootstrap.js"></script>
+<script src="{{ site.url }}/assets/js/vendor/lightbox.js"></script>
 <script src="{{ site.url }}/assets/js/plugins.js"></script>
 <script src="{{ site.url }}/assets/js/main.js"></script>
