--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
   <link rel="author" href="humans.txt">
   <link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ site.url }}/assets/css/lightbox.css">
   <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
   <!--[if lt IE 9]>
