--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,10 @@
-<!-- Footer
+<!-- Javascript
 ================================================== -->
-<footer class="footer">
-  <div class="container">
-    <p>Made with love by <a href="http://link-webcreations.fr">Yves</a>.</p>
-  </div>
-</footer>
+<script src="{{ page.base_url }}/assets/js/vendor/jquery.js"></script>
+<script src="{{ page.base_url }}/assets/js/vendor/bootstrap.js"></script>
+<script src="{{ page.base_url }}/assets/js/vendor/lightbox.js"></script>
+<script src="{{ page.base_url }}/assets/js/plugins.js"></script>
+<script src="{{ page.base_url }}/assets/js/main.js"></script>
+
+<!-- Analytics
+================================================== -->
