--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,28 +1,27 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{ page.title }} &middot; JuEtPy</title>
-  <meta name="description" content="{{ site.description }}">
-  <meta name="author" content="{{ site.author }}">
-  <meta name="viewport" content="width=device-width">
-  <meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="{{ site.description }}">
+<meta name="author" content="{{ site.author }}">
+<meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
 
-  <link rel="author" href="humans.txt">
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css">
-  <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/lightbox.css">
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
+<title>
+  {% if page.title == "JuEtPy" %}
+    {{ page.title }}
+  {% else if %}
+    {{ page.title }} &middot; JuEtPy
+  {% endif %}
+</title>
 
-  <!--[if lt IE 9]>
-    <script src="{{ site.url }}/assets/js/vendor/html5shiv.js"></script>
-    <script src="{{ site.url }}/assets/js/vendor/respond.min.js"></script>
-  <![endif]-->
+<link rel="author" href="humans.txt">
+<link rel="stylesheet" href="{{ page.base_url }}/assets/css/bootstrap.css">
+<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="{{ page.base_url }}/assets/css/lightbox.css">
+<link rel="stylesheet" href="{{ page.base_url }}/assets/css/main.css">
 
-  <!-- Favicons -->
-  <link rel="shortcut icon" href="{{ site.url }}/assets/ico/favicon.ico">
-</head>
+<!--[if lt IE 9]>
+  <script src="{{ page.base_url }}/assets/js/vendor/html5shiv.js"></script>
+  <script src="{{ page.base_url }}/assets/js/vendor/respond.min.js"></script>
+<![endif]-->
+
+<!-- Favicons -->
+<link rel="shortcut icon" href="{{ page.base_url }}/assets/ico/favicon.ico">
