--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -1,6 +1,6 @@
         
         <div class="page-header">
-          <h1><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h1>
+          <h1><a href="{{ page.base_url }}{{ post.url }}">{{ post.title }}</a></h1>
           <p class="lead" datetime="{{ post.date | date: "%d/%m/%Y" }}"><p>Le {{ post.date | date: "%d/%m/%Y" }}</p>
         </div>
         <div>
