--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,29 @@
-{% include header.html %}
-<body>
-<div id="wrap">
-{% include nav-main.html %}
-<div class="container">
-{{ content }}
-</div><!-- /container -->
-</div><!-- /wrap -->
-{% include footer.html %}
-{% include js.html %}
-{% include google_analytics.html %}
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% include header.html %}
+  </head>
+  <body>
+    <div id="wrap">
+
+      <!-- master nav -->
+      {% include nav-main.html %}
+
+      <div class="container">
+        {{ content }}
+      </div><!-- /container -->
+
+    </div><!-- /wrap -->
+
+    <!-- Footer
+    ================================================== -->
+    <footer class="footer">
+      <div class="container">
+        <p>Made with love by <a href="http://link-webcreations.fr">Yves</a>.</p>
+      </div>
+    </footer>
+
+    {% include footer.html %}
+
+  </body>
 </html>
