--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: sidebar
       ================================================== -->
       <section>
         <div class="page-header">
-          <h1><a href="{{ site.url }}{{ page.url }}" >{{ page.title }}</a></h1>
+          <h1><a href="{{ page.base_url }}" >{{ page.title }}</a></h1>
           <p class="lead">Le {{ page.date | date: "%d/%m/%Y" }}
             {% if page.tags %} 
             dans <em>{{ page.categories }}</em>
