--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <!-- Javascript
 ================================================== -->
-<script src="{{ page.base_url }}/assets/js/vendor/jquery.js"></script>
-<script src="{{ page.base_url }}/assets/js/vendor/bootstrap.js"></script>
-<script src="{{ page.base_url }}/assets/js/vendor/lightbox.js"></script>
-<script src="{{ page.base_url }}/assets/js/plugins.js"></script>
-<script src="{{ page.base_url }}/assets/js/main.js"></script>
+<script src="{{ page.base_url }}assets/js/vendor/jquery.js"></script>
+<script src="{{ page.base_url }}assets/js/vendor/bootstrap.js"></script>
+<script src="{{ page.base_url }}assets/js/vendor/lightbox.js"></script>
+<script src="{{ page.base_url }}assets/js/plugins.js"></script>
+<script src="{{ page.base_url }}assets/js/main.js"></script>
 
 <!-- Analytics
 ================================================== -->
