--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,15 +13,15 @@
 </title>
 
 <link rel="author" href="humans.txt">
-<link rel="stylesheet" href="{{ page.base_url }}/assets/css/bootstrap.css">
+<link rel="stylesheet" href="{{ page.base_url }}assets/css/bootstrap.css">
 <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="{{ page.base_url }}/assets/css/lightbox.css">
-<link rel="stylesheet" href="{{ page.base_url }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ page.base_url }}assets/css/lightbox.css">
+<link rel="stylesheet" href="{{ page.base_url }}assets/css/main.css">
 
 <!--[if lt IE 9]>
-  <script src="{{ page.base_url }}/assets/js/vendor/html5shiv.js"></script>
-  <script src="{{ page.base_url }}/assets/js/vendor/respond.min.js"></script>
+  <script src="{{ page.base_url }}assets/js/vendor/html5shiv.js"></script>
+  <script src="{{ page.base_url }}assets/js/vendor/respond.min.js"></script>
 <![endif]-->
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="{{ page.base_url }}/assets/ico/favicon.ico">
+<link rel="shortcut icon" href="{{ page.base_url }}assets/ico/favicon.ico">
