--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -9,20 +9,20 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="{{ page.base_url }}/" class="navbar-brand">YOOOO</a>
+    <a href="{{ page.base_url }}" class="navbar-brand">YOOOO</a>
     <div class="nav-collapse collapse">
       <ul class="nav navbar-nav">
         <li{% if page.slug == "home" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}/">Accueil</a>
+          <a href="{{ page.base_url }}">Accueil</a>
         </li>
         <li{% if page.slug == "preparatifs" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}/preparatifs.html">Préparatifs</a>
+          <a href="{{ page.base_url }}preparatifs">Préparatifs</a>
         </li>
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}/articles/">Articles</a>
+          <a href="{{ page.base_url }}articles/">Articles</a>
         </li>
         <li{% if page.slug == "galerie" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}/galerie.html">Galerie</a>
+          <a href="{{ page.base_url }}galerie">Galerie</a>
         </li>
       </ul>
     </div>
