--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -15,8 +15,8 @@
         <li{% if page.slug == "home" %} class="active"{% endif %}>
           <a href="{{ page.base_url }}">Accueil</a>
         </li>
-        <li{% if page.slug == "preparatifs" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}preparatifs">Préparatifs</a>
+        <li{% if page.slug == "presentation" %} class="active"{% endif %}>
+          <a href="{{ page.base_url }}presentation">Présentation</a>
         </li>
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
           <a href="{{ page.base_url }}articles/">Articles</a>
