--- a/_includes/nav-preparatifs.html
+++ b/_includes/nav-preparatifs.html
@@ -1,4 +1,4 @@
 <li><a href="#nous">Nous</a></li>
-<li><a href="#itineraire">L'itinéraire</a></li>
-<li><a href="#sacs">Nos sacs à dos</a></li>
-<li><a href="#budget">Budget</a></li>
+<li><a href="#projet">La naissance du projet</a></li>
+<li><a href="#parcours">Le parcours</a></li>
+<li><a href="#organisation">L'organisation</a></li>
