--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -8,8 +8,8 @@ layout: default
       <ul class="nav">
         {% if page.slug == "articles" %}
           {% include nav-articles.html %}
-        {% elsif page.slug == "preparatifs" %}
-          {% include nav-preparatifs.html %}
+        {% elsif page.slug == "presentation" %}
+          {% include nav-presentation.html %}
         {% elsif page.slug == "galerie" %}
           {% include nav-galerie.html %}
         {% endif %}
