--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -4,7 +4,7 @@
 <div class="navbar navbar-fixed-top"  id="top">
 {% endif %}
   <div class="container">
-    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".nav-collapse">
+    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
