--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -4,17 +4,17 @@
 <div class="navbar navbar-fixed-top"  id="top">
 {% endif %}
   <div class="container">
-    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a href="{{ page.base_url }}" class="navbar-brand">YOOOO</a>
-    <div class="nav-collapse collapse">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="{{ page.base_url }}" class="navbar-brand">Accueil</a>
+    </div>  
+    <nav class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li{% if page.slug == "home" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}">Accueil</a>
-        </li>
         <li{% if page.slug == "presentation" %} class="active"{% endif %}>
           <a href="{{ page.base_url }}presentation">Présentation</a>
         </li>
@@ -25,6 +25,6 @@
           <a href="{{ page.base_url }}galerie">Galerie</a>
         </li>
       </ul>
-    </div>
+    </nav>
   </div>
 </div>
