--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-md-3">
     <div class="sidebar">
-      <ul class="nav">
+      <ul class="nav sidenav">
         {% if page.slug == "articles" %}
           {% include nav-articles.html %}
         {% elsif page.slug == "presentation" %}
@@ -16,7 +16,7 @@ layout: default
       </ul>
     </div>
   </div>
-  <div class="col-lg-9">
+  <div class="col-md-9">
     {{ content }}
   </div>
 </div><!-- /row (sidebar)-->
